# VisionArena_9-442

./: Dockerfile  README.md  docker-compose.yml
detector/: CMakeLists.txt  package.xml
detector/install/: local_setup.sh  setup.sh
detector/log/: latest_build
detector/src/: camera_detector.cpp
doc/: Topic.md  launchsetting.md  objectpublic.md
install/: local_setup.sh  setup.sh
install/player_pkg/lib/player_pkg/: yolo_detector_node
log/: latest_build  latest_list
results/: 9#442_results.json  9#442_results.json.sha256  TEAM8_results.json  TEAM8_results.json.sha256
results_level_1/: TEAM8_results1.json  TEAM8_results1.json.sha256  TEAM8_results2.json  TEAM8_results2.json.sha256
results_level_2/: TEAM8_results3.json  TEAM8_results3.json.sha256  TEAM8_results4.json  TEAM8_results4.json.sha256
results_level_3/: TEAM8_results5.json  TEAM8_results5.json.sha256
scripts_to_run/: run.sh  run1.sh
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/player_pkg/: CMakeLists.txt  CMakeLists.txt.backup  package.xml.backup
src/player_pkg/install/: local_setup.sh  setup.sh
src/player_pkg/install/player_pkg/lib/player_pkg/: TestNode  yolo_detector_node  yolo_node
src/player_pkg/install/player_pkg/share/ament_index/resource_index/package_run_dependencies/: player_pkg
src/player_pkg/install/player_pkg/share/ament_index/resource_index/parent_prefix_path/: player_pkg
src/player_pkg/install/player_pkg/share/player_pkg/: package.sh
src/player_pkg/log/: latest_build
src/player_pkg/src/: camera_detect.cpp  imgcropping.cpp  test.py  yolo_detect.hpp
(+13 files in other folders)
